# mkdocs-nav-numbering-plugin

./: CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: faq.md  index.md
docs/guide/: configuration.md  install.md  quick-start.md  tips.md
docs/reference/: api.md  cli.md
src/mkdocs_nav_numbering_plugin/: __init__.py  nav_numbering.py
